add idle source watermark advance logic